content/versions/3.2/guides/container-image.adoc
////
This guide is maintained in the main Quarkus repository
and pull requests should be submitted there:
https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
////
= Container Images
include::_attributes.adoc[]
:categories: cloud
:summary: Learn how to build and push container images with Jib, OpenShift or Docker as part of the Quarkus build.

Quarkus provides extensions for building (and pushing) container images. Currently, it supports:

- xref:jib[Jib]
- xref:docker[Docker]
- xref:openshift[OpenShift]
- xref:buildpack[Buildpack]

== Container Image extensions

[[jib]]
=== Jib

The extension `quarkus-container-image-jib` is powered by https://github.com/GoogleContainerTools/jib[Jib] for performing container image builds.
The major benefit of using Jib with Quarkus is that all the dependencies (everything found under `target/lib`) are cached in a different layer than the actual application making rebuilds really fast and small (when it comes to pushing).
Another important benefit of using this extension is that it provides the ability to create a container image without having to have any dedicated client side tooling (like Docker) or running daemon processes (like the Docker daemon)
when all that is needed is the ability to push to a container image registry.

To use this feature, add the following extension to your project:

:add-extension-extensions: container-image-jib
include::{includes}/devtools/extension-add.adoc[]

WARNING: In situations where all that is needed to build a container image and no push to a registry is necessary (essentially by having set `quarkus.container-image.build=true` and left `quarkus.container-image.push` unset - it defaults to `false`), then this extension creates a container image and registers
it with the Docker daemon. This means that although Docker isn't used to build the image, it is nevertheless necessary. Also note that using this mode, the built container image *will*
show up when executing `docker images`.

==== Including extra files

There are cases when additional files (other than ones produced by the Quarkus build) need to be added to a container image.
To support these cases, Quarkus copies any file under `src/main/jib` into the built container image (which is essentially the same
idea that the Jib Maven and Gradle plugins support).
For example, the presence of `src/main/jib/foo/bar` would result in  `/foo/bar` being added into the container filesystem.

==== JVM Debugging

There are cases where the built container image may need to have Java debugging conditionally enabled at runtime.

When the base image has not been changed (and therefore `ubi8/openjdk-11-runtime` or `ubi8/openjdk-17-runtime` is used), then the `quarkus.jib.jvm-arguments` configuration property can be used in order to
make the JVM listen on the debug port at startup.

The exact configuration is:

[source,properties]
----
quarkus.jib.jvm-arguments=-agentlib:jdwp=transport=dt_socket\\,server=y\\,suspend=n\\,address=*:5005
----

Other base images might provide launch scripts that enable debugging when an environment variable is set, in which case you would set than environment variable when launching the container.

==== Custom Entrypoint

The `quarkus.jib.jvm-entrypoint` configuration property can be used to completely override the container entry point and can thus be used to either hard code the JVM debug configuration or point to a script that handles the details.

For example, if the base images `ubi8/openjdk-11-runtime` or `ubi8/openjdk-17-runtime` are used to build the container, the entry point can be hard-coded on the application properties file.

.Example application.properties
[source,properties]
----
quarkus.jib.jvm-entrypoint=java,-Dcustom.param=custom_value,-jar,quarkus-run.jar
----

Or a custom start-up script can be created and referenced on the properties file. This approach works better if there's a need to set application params using environment variables:

.Example application.properties
[source,properties]
----
quarkus.jib.jvm-entrypoint=/bin/sh,run-java.sh
----

.Example src/main/jib/home/jboss/run-java.sh
[source,shell]
----
java \
  -Djavax.net.ssl.trustStore=/deployments/truststore \
  -Djavax.net.ssl.trustStorePassword="$TRUST_STORE_PASSWORD" \
  -jar quarkus-run.jar
----

NOTE: `/home/jboss` is the WORKDIR for all quarkus binaries in the base images `ubi8/openjdk-11-runtime` and `ubi8/openjdk-17-runtime` (https://catalog.redhat.com/software/containers/ubi8/openjdk-17/618bdbf34ae3739687568813?container-tabs=dockerfile[Dockerfile for ubi8/openjdk-17-runtime, window="_blank"])

==== Multi-module projects and layering

When building a multi-module project containing a Quarkus application as one module and various supporting project dependencies as other modules,
Quarkus supports placing these supporting modules in a separate container image layer from the rest of the application dependencies, with the expectation
that these supporting modules will change more frequently than the regular application dependencies - thus making a rebuild faster if the
application dependencies have not changed.

To enable this feature, the property `quarkus.bootstrap.workspace-discovery` needs to be set to `true` either as a system property
when invoking the build tool, either as a build tool property. Setting this property in `application.properties` will **not** work because
this property needs to be known very early on in the build process.

==== AppCDS

Quarkus supports generating and including an link:https://docs.oracle.com/en/java/javase/17/docs/specs/man/java.html#application-class-data-sharing[Application Class Data Sharing] archive when generating a container image using Jib.
See the xref:appcds.adoc[AppCDS documentation] for more details.

[[docker]]
=== Docker

The extension `quarkus-container-image-docker` is using the Docker binary and the generated Dockerfiles under `src/main/docker` in order to perform Docker builds.

To use this feature, add the following extension to your project.

:add-extension-extensions: container-image-docker
include::{includes}/devtools/extension-add.adoc[]

The `quarkus-container-image-docker` extension is capable of https://docs.docker.com/buildx/working-with-buildx/#build-multi-platform-images/[creating multi-platform (or multi-arch)] images using https://docs.docker.com/engine/reference/commandline/buildx_build/[`docker buildx build`]. See the `quarkus.docker.buildx.*` configuration items in the xref:DockerOptions[Docker Options] section below.

NOTE: `docker buildx build` ONLY supports https://docs.docker.com/engine/reference/commandline/buildx_build/#load[loading the result of a build] to `docker images` when building for a single platform. Therefore, if you specify more than one argument in the `quarkus.docker.buildx.platform` property, the resulting images will not be loaded into `docker images`. If `quarkus.docker.buildx.platform` is omitted or if only a single platform is specified, it will then be loaded into `docker images`.

[[openshift]]
=== OpenShift

The extension `quarkus-container-image-openshift` is using OpenShift binary builds in order to perform container builds inside the OpenShift cluster.
The idea behind the binary build is that you just upload the artifact and its dependencies to the cluster and during the build they will be merged to a builder image (defaults to `fabric8/s2i-java`).

The benefit of this approach, is that it can be combined with OpenShift's `DeploymentConfig` that makes it easy to roll out changes to the cluster.

To use this feature, add the following extension to your project.

:add-extension-extensions: container-image-openshift
include::{includes}/devtools/extension-add.adoc[]

OpenShift builds require creating a `BuildConfig` and two `ImageStream` resources, one for the builder image and one for the output image.
The creation of such objects is being taken care of by the Quarkus Kubernetes extension.


[[buildpack]]
=== Buildpack

The extension `quarkus-container-image-buildpack` is using buildpacks in order to perform container image builds. 
Under the hood buildpacks will use a Docker daemon for the actual build.
While buildpacks support alternatives to Docker, this extension will only work with Docker.

Additionally, the user will have to configure which build image to use (no default image is provided). For example:

[source,properties]
----
quarkus.buildpack.jvm-builder-image=<jvm builder image>
----

or for native:

[source,properties]
----
quarkus.buildpack.native-builder-image=<native builder image>
----

To use this feature, add the following extension to your project.

:add-extension-extensions: container-image-buildpack
include::{includes}/devtools/extension-add.adoc[]

NOTE: When using the buildpack container image extension it is strongly advised to avoid adding `quarkus.container-image.build=true` in your properties configuration as it might trigger nesting builds within builds. It's preferable to pass it as an option to the build command instead.

== Building

To build a container image for your project, `quarkus.container-image.build=true` needs to be set using any of the ways that Quarkus supports.

:build-additional-parameters: -Dquarkus.container-image.build=true
include::{includes}/devtools/build.adoc[]
:!build-additional-parameters:

NOTE: If you ever want to build a native container image and already have an existing native image you can set `-Dquarkus.native.reuse-existing=true` and the native image build will not be re-run.

== Using @QuarkusIntegrationTest

To run tests on the resulting image, `quarkus.container-image.build=true` needs to be set using any of the ways that Quarkus supports.

[source, bash, subs=attributes+, role="primary asciidoc-tabs-sync-maven"]
.Maven
----
./mvnw verify -Dquarkus.container-image.build=true
----
[source, bash, subs=attributes+, role="secondary asciidoc-tabs-sync-gradle"]
.Gradle
----
./gradlew quarkusIntTest -Dquarkus.container-image.build=true
----

== Pushing

To push a container image for your project, `quarkus.container-image.push=true` needs to be set using any of the ways that Quarkus supports.

:build-additional-parameters: -Dquarkus.container-image.push=true
include::{includes}/devtools/build.adoc[]
:!build-additional-parameters:

NOTE: If no registry is set (using `quarkus.container-image.registry`) then `docker.io` will be used as the default.

== Selecting among multiple extensions

It does not make sense to use multiple extension as part of the same build. When multiple container image extensions are present, an error will be raised to inform the user. The user can either remove the unneeded extensions or select one using `application.properties`.

For example, if both `container-image-docker` and `container-image-openshift` are present and the user needs to use `container-image-docker`:

[source,properties]
----
quarkus.container-image.builder=docker
----

== Integrating with `systemd-notify`

If you are building a container image in order to deploy your Quarkus application as a Linux service with Podman and Systemd, you might want to consider including the https://quarkiverse.github.io/quarkiverse-docs/quarkus-systemd-notify/dev/index.html[Quarkus Systemd Notify Extension] as part of your application, with:

:add-extension-extensions: io.quarkiverse.systemd.notify:quarkus-systemd-notify
include::{includes}/devtools/extension-add.adoc[]

== Customizing

The following properties can be used to customize the container image build process.

=== Container Image Options

include::{generated-dir}/config/quarkus-container-image.adoc[opts=optional, leveloffset=+1]

==== Using CI Environments

Various CI environments provide a ready to use container-image registry which can be combined with the container-image Quarkus extensions in order to
effortlessly create and push a Quarkus application to said registry.

For example, https://gitlab.com/[GitLab] provides such a registry and in the provided CI environment,
makes available the `CI_REGISTRY_IMAGE` environment variable
(see GitLab's https://docs.gitlab.com/ee/ci/variables/[documentation]) for more information), which can be used in Quarkus like so:

[source,properties]
----
quarkus.container-image.image=${CI_REGISTRY_IMAGE}
----

NOTE: See xref:config-reference.adoc#with-environment-variables[this] for more information on how to combine properties with environment variables.

=== Jib Options

In addition to the generic container image options, the `container-image-jib` also provides the following options:

include::{generated-dir}/config/quarkus-container-image-jib.adoc[opts=optional, leveloffset=+1]

[[DockerOptions]]
=== Docker Options

In addition to the generic container image options, the `container-image-docker` also provides the following options:

include::{generated-dir}/config/quarkus-container-image-docker.adoc[opts=optional, leveloffset=+1]

=== OpenShift  Options

In addition to the generic container image options, the `container-image-openshift` also provides the following options:

include::{generated-dir}/config/quarkus-container-image-openshift.adoc[opts=optional, leveloffset=+1]
